--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <main class="container mx-auto my-10">
         <section class="bg-gray-900 p-6 rounded-lg shadow-lg">
             <h2 class="text-2xl font-bold mb-4 text-primary">Project Overview</h2>
-            <p class="mb-4">This project, developed by Leela and Subhang, implements a Q-learning algorithm to find the shortest path in a grid environment. It includes a graphical user interface (GUI) using Tkinter to visualize the agent's learning and testing process.</p>
+            <p class="mb-4">This project, developed by Leela, implements a Q-learning algorithm to find the shortest path in a grid environment. It includes a graphical user interface (GUI) using Tkinter to visualize the agent's learning and testing process.</p>
             <button id="view-repo" class="bg-blue-600 text-white py-2 px-4 rounded-lg hover:bg-blue-700">View GitHub Repository</button>
         </section>
 
@@ -61,7 +61,7 @@
 
     <footer class="bg-gray-800 text-white p-6 mt-10">
         <div class="container mx-auto">
-            <p class="text-center">© 2024 Leela and Subhang. All rights reserved.</p>
+            <p class="text-center">© 2024 Leela. All rights reserved.</p>
         </div>
     </footer>
 
